--- a/FirestoreAssignment/storyboards/Base.lproj/Main.storyboard
+++ b/FirestoreAssignment/storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BWg-Jj-FDk">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nFB-JY-G3u">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="Oy6-Ud-wjT">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="412"/>
@@ -168,7 +168,7 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nbd-mQ-c3B" secondAttribute="trailing" constant="24" id="6Sj-Os-Jbk"/>
-                            <constraint firstItem="nFB-JY-G3u" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="BNq-vx-qKI"/>
+                            <constraint firstItem="nFB-JY-G3u" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="BNq-vx-qKI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nFB-JY-G3u" secondAttribute="bottom" id="EP2-3A-X8G"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nFB-JY-G3u" secondAttribute="trailing" id="OyV-Gy-AeT"/>
                             <constraint firstItem="nFB-JY-G3u" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fR7-eX-6gs"/>
@@ -176,7 +176,8 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <navigationItem key="navigationItem" id="ci4-iM-Bzs"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="collectionViewFoodType" destination="2gS-bb-M7n" id="YOX-r8-jEn"/>
                         <outlet property="createFoodView" destination="nbd-mQ-c3B" id="Gh7-J9-NpW"/>
@@ -186,25 +187,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="76.339285714285708"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="76.339285714285708"/>
         </scene>
         <!--Create Food Item-->
         <scene sceneID="lkd-3c-Wn6">
             <objects>
-                <viewController id="05e-uo-rvb" customClass="CreateFoodItemViewController" customModule="FirestoreAssignment" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateFoodItemViewController" modalPresentationStyle="fullScreen" id="05e-uo-rvb" customClass="CreateFoodItemViewController" customModule="FirestoreAssignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="A0J-4c-SIe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hamburger" translatesAutoresizingMaskIntoConstraints="NO" id="OAj-GP-l6R">
-                                <rect key="frame" x="24" y="112" width="138" height="138"/>
+                                <rect key="frame" x="24" y="68" width="138" height="138"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="138" id="GEg-YL-LCM"/>
                                     <constraint firstAttribute="width" constant="138" id="Oc7-Vi-i1T"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W89-Zt-sqo">
-                                <rect key="frame" x="178" y="158" width="220" height="46"/>
+                                <rect key="frame" x="178" y="114" width="220" height="46"/>
                                 <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="k6r-Aw-BaM"/>
@@ -216,7 +217,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Ecm-oS-DWl">
-                                <rect key="frame" x="24" y="282" width="366" height="294"/>
+                                <rect key="frame" x="24" y="238" width="366" height="294"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qbR-zq-RZf">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="46"/>
@@ -333,7 +334,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QSu-di-ZKk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1151" y="88"/>
+            <point key="canvasLocation" x="2060.8695652173915" y="87.723214285714278"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bDH-TO-grm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BWg-Jj-FDk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wZK-c7-gc4">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="dfR-Kn-00I"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5vk-XT-4JQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="76.339285714285708"/>
         </scene>
     </scenes>
     <resources>
